# docs-indexer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Makefile.testing.mk  README.md  blog.py  circle.yml  cliff.toml  common.py  common_test.py  docker-compose.yaml  docs.py  docs_test.py  hugo.py  hugo_test.py  indexer.py  indexer_test.py  main.py  mapping.json  pyproject.toml  renovate.json5  requirements.txt
.abs/: .kube-linter.yaml  main.yaml
.ats/: main.yaml
.circleci/: config.yml  custom.yml  workflows.yml
.github/workflows/: integration-test.yaml
docs/: README.md  configuration.md  design.md  development.md  schema.md
docs-indexer-chart/templates/: cronjob.yaml
helm/docs-indexer-app/: Chart.yaml  values.yaml
helm/docs-indexer-app/templates/: _helpers.tpl  cronjob-blog.yaml  cronjob-docs.yaml  cronjob-handbook.yaml  cronjob-intranet.yaml  cronjob.yaml  pss.yaml  rbac-and-psp.yaml  rbac.yaml  secret.yaml
helm/docs-indexer-chart/: Chart.yaml
helm/docs-indexer-chart/templates/: cronjob.yaml  indexer-cronjob.yaml  secrets.yaml
kubernetes/: job.yaml  secrets.yaml.dist
mappings/: blog.json  hugo.json
pkg/project/: project.go
test/: integrationtest.sh
