[project]
name = "docs-indexer"
version = "0.1.0"
description = "Search content indexer for Giant Swarm's search engines"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "chardet==5.2.0",
    "click==8.3.1",
    "opensearch-py==3.1.0",
    "GitPython==3.1.46",
    "idna==3.11",
    "Markdown==3.10",
    "prance==25.4.8.0",
    "requests==2.32.5",
    "semver==3.0.4",
    "six==1.17.0",
    "soupsieve==2.8.1",
    "urllib3==2.6.2",
    "PyYAML==6.0.3",
]

[tool.uv]
# This is an application, not a library, so we don't need to build it
package = false
