[project]
name = "docs-indexer"
version = "0.1.0"
description = "Search content indexer for Giant Swarm's search engines"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "chardet==7.4.3",
    "click==8.4.1",
    "opensearch-py==3.2.0",
    "GitPython==3.1.50",
    "idna==3.18",
    "Markdown==3.10.2",
    "prance==25.4.8.0",
    "requests==2.34.2",
    "semver==3.0.4",
    "six==1.17.0",
    "soupsieve==2.8.4",
    "urllib3==2.7.0",
    "PyYAML==6.0.3",
]

[tool.uv]
# This is an application, not a library, so we don't need to build it
package = false
